Fixed forum reply box not showing because of the title structure change.

--- a/assets/less/classes/container.less
+++ b/assets/less/classes/container.less
@@ -1,15 +1,14 @@
 .container {
     // todo: make this now bad
-    background-image:
-        linear-gradient(0deg, var(--background-colour-translucent), var(--background-colour-translucent)),
-        linear-gradient(0deg, var(--accent-colour), var(--accent-colour));
+    background-image: linear-gradient(0deg, var(--background-colour-translucent), var(--background-colour-translucent));
+    background-color: var(--accent-colour);
 
     box-shadow: 0 1px 2px #000A;
     text-shadow: 0 1px 4px #000;
 
     // should this exist?
     &--hidden { // __title should always be the first element of a container
-        :not(:first-child) {
+        > :not(:first-child) {
             display: none;
         }
     }
